--- a/app.html
+++ b/app.html
@@ -24,6 +24,8 @@
         }).catch(function(error){
             console.log(error);
         });
+
+        console.log('modificado');
     </script>
     
 </body>
